# obsrv

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  NEXT_STEPS.md  PHASE2_COMPLETE.md  README.md  SETUP_GUIDE.md  US1_COMPLETE.md  US2_COMPLETE.md  alembic.ini  check-checklist.ps1  create-dirs.ps1  create-first-apikey.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-vps.sh  validate-deployment.sh
.claude/: settings.local.json
.opencode/command/: speckit.plan.md
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20251104_0100_001_initial_schema.py  20251104_0200_clean_and_recreate_schema.py
backend/src/: __init__.py
backend/src/api/: health.py  main.py
backend/src/api/routes/: auth.py  websites.py
backend/src/api/schemas/: auth_schemas.py  webhook_schemas.py  website_schemas.py
backend/src/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  inngest.py  logging.py  product_extractors.py  url_utils.py  webhook_security.py
backend/src/models/: __init__.py  api_key.py  base.py  client.py  crawl_log.py  product.py  product_history.py  webhook_log.py  website.py
backend/src/services/: baseline_crawl_service.py  change_detector.py  crawler_service.py  discovery_service.py  webhook_service.py  website_service.py
backend/src/services/inngest_functions/: __init__.py  baseline_crawl.py  deliver_webhook.py  discover_products.py  scheduled_crawl.py
ideation/VPS/: CHATGPT_RESPONSE.md  MERMEID_DIAGRAM.md  VPS_PROMPT.md
ideation/microservices/: CHATGPT_MERMAID_DIAGRAM.md  CHATGPT_RESPONSE.md  MICROSERVICES_PROMPT.md
specs/001-ecommerce-monitor/: spec.md
specs/001-ecommerce-monitor/checklists/: requirements.md
specs/001-obsrv-api-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  technical-decisions.md
specs/001-obsrv-api-mvp/checklists/: requirements.md
specs/001-obsrv-api-mvp/contracts/: openapi.yaml  webhook-payload.md
